change of initial temperature

--- a/notebook/2_state_temperature.ipynb
+++ b/notebook/2_state_temperature.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 192,
-   "id": "known-manitoba",
+   "execution_count": 1,
+   "id": "brown-synthetic",
    "metadata": {
     "code_folding": []
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "intellectual-combining",
+   "id": "durable-optimum",
    "metadata": {},
    "source": [
     "# Simple version\n",
@@ -98,8 +98,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
-   "id": "connected-waters",
+   "execution_count": 2,
+   "id": "serious-ceiling",
    "metadata": {
     "code_folding": []
    },
@@ -140,8 +140,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
-   "id": "cloudy-peripheral",
+   "execution_count": 3,
+   "id": "handmade-oxford",
    "metadata": {
     "scrolled": false
    },
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 317,
-   "id": "perceived-monkey",
+   "id": "declared-education",
    "metadata": {
     "scrolled": true
    },
@@ -23588,7 +23588,7 @@
   {
    "cell_type": "code",
    "execution_count": 318,
-   "id": "latin-assignment",
+   "id": "incredible-diana",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23598,7 +23598,7 @@
   {
    "cell_type": "code",
    "execution_count": 325,
-   "id": "fantastic-wilson",
+   "id": "corrected-fleet",
    "metadata": {},
    "outputs": [
     {
@@ -23622,7 +23622,7 @@
   {
    "cell_type": "code",
    "execution_count": 319,
-   "id": "rough-script",
+   "id": "likely-hygiene",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23632,7 +23632,7 @@
   {
    "cell_type": "code",
    "execution_count": 324,
-   "id": "ecological-material",
+   "id": "marine-photography",
    "metadata": {},
    "outputs": [
     {
@@ -23657,7 +23657,7 @@
   {
    "cell_type": "code",
    "execution_count": 278,
-   "id": "contemporary-official",
+   "id": "jewish-entrepreneur",
    "metadata": {
     "scrolled": true
    },
@@ -29926,7 +29926,7 @@
   {
    "cell_type": "code",
    "execution_count": 279,
-   "id": "gothic-transportation",
+   "id": "flexible-prairie",
    "metadata": {},
    "outputs": [
     {
@@ -29947,7 +29947,7 @@
   {
    "cell_type": "code",
    "execution_count": 280,
-   "id": "substantial-comparative",
+   "id": "minor-cleaning",
    "metadata": {},
    "outputs": [
     {
@@ -29968,7 +29968,7 @@
   {
    "cell_type": "code",
    "execution_count": 327,
-   "id": "demonstrated-program",
+   "id": "sealed-sodium",
    "metadata": {},
    "outputs": [
     {
@@ -30001,11 +30001,9 @@
   {
    "cell_type": "code",
    "execution_count": 406,
-   "id": "mediterranean-boating",
+   "id": "creative-vision",
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
@@ -30043,7 +30041,7 @@
   {
    "cell_type": "code",
    "execution_count": 329,
-   "id": "amended-sister",
+   "id": "breathing-wisconsin",
    "metadata": {},
    "outputs": [
     {
@@ -30064,7 +30062,7 @@
   {
    "cell_type": "code",
    "execution_count": 330,
-   "id": "humanitarian-office",
+   "id": "exotic-midwest",
    "metadata": {},
    "outputs": [
     {
@@ -30085,7 +30083,7 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "id": "statistical-rating",
+   "id": "weighted-prison",
    "metadata": {
     "scrolled": true
    },
@@ -30143,7 +30141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "headed-motor",
+   "id": "early-prayer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30173,7 +30171,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "silver-salad",
+   "id": "harmful-cargo",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30203,7 +30201,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "opened-taiwan",
+   "id": "finite-trunk",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30224,7 +30222,7 @@
   {
    "cell_type": "code",
    "execution_count": 249,
-   "id": "thick-fourth",
+   "id": "determined-analysis",
    "metadata": {
     "scrolled": false
    },
@@ -30239,7 +30237,7 @@
   {
    "cell_type": "code",
    "execution_count": 294,
-   "id": "searching-publicity",
+   "id": "american-iceland",
    "metadata": {
     "scrolled": false
    },
@@ -30254,7 +30252,7 @@
   {
    "cell_type": "code",
    "execution_count": 284,
-   "id": "corporate-talent",
+   "id": "conditional-colors",
    "metadata": {},
    "outputs": [
     {
@@ -30287,7 +30285,7 @@
   {
    "cell_type": "code",
    "execution_count": 291,
-   "id": "suspended-highlight",
+   "id": "political-actor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30297,7 +30295,7 @@
   {
    "cell_type": "code",
    "execution_count": 292,
-   "id": "negative-essence",
+   "id": "economic-microwave",
    "metadata": {
     "scrolled": true
    },
@@ -30332,7 +30330,7 @@
   {
    "cell_type": "code",
    "execution_count": 392,
-   "id": "descending-uniform",
+   "id": "flexible-compiler",
    "metadata": {},
    "outputs": [
     {
@@ -30374,7 +30372,7 @@
   {
    "cell_type": "code",
    "execution_count": 361,
-   "id": "backed-communications",
+   "id": "acknowledged-husband",
    "metadata": {},
    "outputs": [
     {
@@ -30415,7 +30413,7 @@
   {
    "cell_type": "code",
    "execution_count": 255,
-   "id": "peripheral-trademark",
+   "id": "remarkable-calcium",
    "metadata": {
     "scrolled": false
    },
@@ -30479,7 +30477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cordless-looking",
+   "id": "difficult-monaco",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30500,7 +30498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "velvet-messenger",
+   "id": "advised-invalid",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30515,7 +30513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "macro-buyer",
+   "id": "fewer-founder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30527,7 +30525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "familiar-method",
+   "id": "horizontal-valley",
    "metadata": {
     "scrolled": true
    },
@@ -30539,7 +30537,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "drawn-prisoner",
+   "id": "partial-pointer",
    "metadata": {},
    "outputs": [
     {
@@ -30574,7 +30572,7 @@
   {
    "cell_type": "code",
    "execution_count": 402,
-   "id": "leading-jesus",
+   "id": "educational-abortion",
    "metadata": {
     "scrolled": true
    },
@@ -30605,7 +30603,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "exterior-authentication",
+   "id": "native-breach",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30632,7 +30630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adapted-qualification",
+   "id": "played-million",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30642,7 +30640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "opposed-boards",
+   "id": "allied-happening",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30655,7 +30653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "forbidden-renaissance",
+   "id": "first-islam",
    "metadata": {},
    "outputs": [],
    "source": [
