--- a/notebook/damage_simulation-Copy1.ipynb
+++ b/notebook/damage_simulation-Copy1.ipynb
@@ -311,7 +311,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f4941c124f0>]"
+       "[<matplotlib.lines.Line2D at 0x7fc1d0bc3430>]"
       ]
      },
      "execution_count": 19,
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
        "(9.10116e-05, 0.002984)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,28 +492,6 @@
     "var_c = np.dot(σc,σc)\n",
     "var_z = np.dot(σz,σz)\n",
     "var_c, var_z"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.02500000000000001"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "α - invkap"
    ]
   },
   {
@@ -544,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +531,7 @@
        "(96.8, 58.666666666666664)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +553,7 @@
        "array([-0.44282773, -0.58666667])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,6 +562,91 @@
     "ξb = 5\n",
     "h = -1/ξb*(vc*σc + vz*σz)\n",
     "h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0.      , 0.054626]), array([0.00873211, 0.00384213]))"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cov_cz = σc@σz\n",
+    "σz_new = np.array([0, np.sqrt(var_z)])\n",
+    "σc_new = np.array([np.sqrt(var_c -   (cov_cz/σz_new[1])**2), cov_cz/σz_new[1]])\n",
+    "σz_new, σc_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.16905356, -0.71532865])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ξb = 5\n",
+    "h = -1/ξb*(vc*σc_new + vz*σz_new)\n",
+    "h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.06753427239836444"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h@h/8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.263635868781968"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.log(2)/(h@h/8)"
    ]
   },
   {
