--- a/notebook/damage_simulation-Copy1.ipynb
+++ b/notebook/damage_simulation-Copy1.ipynb
@@ -354,7 +354,7 @@
     "plt.ylabel('emission')\n",
     "plt.xlabel('years')\n",
     "plt.title('emission trajectory, wrestling')\n",
-    "plt.savefig(\"../figures/emssion.png\")"
+    "# plt.savefig(\"../figures/emssion.png\")"
    ]
   },
   {
