--- a/notebook/Typo.ipynb
+++ b/notebook/Typo.ipynb
@@ -4,21 +4,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Page 11, the thrid last line in the paragraph just above Section 4: \"For sufficiently ${\\color{red}{\\text{large}}}$ $\\zeta$\" -> \"For sufficiently ${\\color{blue}{\\text{small}}}$ $\\zeta$\".\n",
-    "\n",
-    "2. Page 11, the capital evolution process in Section 4:\n",
+    "1. Page 12, the second equation:\n",
     "\n",
     "$$\n",
-    "d K_t =  K_t   \\left[ \\mu_k (Z_t) \\cdot dt + \\left({\\frac {I_t}{K_t}} \\right)dt - {\\frac { \\kappa} 2} \\left( {\\frac {I_t} {K_t}} \\right)^2 dt \n",
-    "+ \\sigma_k({\\color{red}{Z_t^1}}) \\cdot {\\color{red}{dW_t^1}} \\right]\n",
+    "d K_t =  K_t \\left[ \\mu_k (Z_t) dt    + \\left({\\frac {I_t}{K_t}} \\right) dt  -\n",
+    "{\\frac { \\kappa} 2} \\left( {\\frac {I_t} {K_t}} \\right)^2 dt + \\sigma_k(Z_t) {\\color{red}{dW_t}} \\right]   \n",
     "$$\n",
     "\n",
     "$$\n",
-    "d\\log K_t =  \\left[ \\mu_k ({\\color{red}{Z_t^k}})    + \\left({\\frac {I_t}{K_t}} \\right)  -\n",
-    "{\\frac { \\kappa} 2} \\left( {\\frac {I_t} {K_t}} \\right)^2 \\right] dt -  {\\frac  {\\vert \\sigma_k({\\color{red}{Z_t^1}}) \\vert^2}  2}dt+ \\sigma_k({\\color{red}{Z_t^1}}) \\cdot dW_t^1 ,\n",
+    "d\\log K_t =  \\left[ \\mu_k (Z_t)    + \\left({\\frac {I_t}{K_t}} \\right)  -\n",
+    "{\\frac { \\kappa} 2} \\left( {\\frac {I_t} {K_t}} \\right)^2 \\right] dt -  {\\frac  {\\vert \\sigma_k(Z_t) \\vert^2}  2}dt+ \\sigma_k(Z_t) {\\color{red}{dW_t^1}} ,\n",
     "$$\n",
     "\n",
-    "${\\color{red}{Z_t^k}} \\to {\\color{blue}{Z_t}}$, ${\\color{red}{Z_t^1}} \\to {\\color{blue}{Z_t}}$, ${\\color{red}{dW_t^1}} \\to {\\color{blue}{dW_t}}$ "
+    "The notation for $dW_t$ is not consistent with earlier ones. ${\\color{red}{dW_t}}, {\\color{red}{dW_t^1}} \\to {\\color{blue}{dW_t^k}}$.\n",
+    "\n",
+    "2. Page 20, equation (6):\n",
+    "\n",
+    "\\begin{equation} \\label{mb=mc}\n",
+    " \\frac {\\eta} { e}  =  -   \\frac {d \\phi(y)}{d y}  (\\iota_y \\cdot z) \\sum_{\\ell=1}^L \\pi^a_\\ell  \\theta_\\ell -   \\frac {d^2 \\phi(y)}{(dy)^2} |\\varsigma|^2  {\\color{blue}{(\\iota_y \\cdot z)^2}} e\n",
+    " -   {\\frac {(\\eta - 1)} \\delta} \\left[  (\\iota_y \\cdot z) \\left( \\gamma_1 + \\gamma_2 y \\right)  \\sum_{\\ell=1}^L \\pi^a_\\ell \\theta_\\ell - \\gamma_2 |\\varsigma|^2 {\\color{blue}{(\\iota_y \\cdot z)^2}}  e\\right]\n",
+    "\\end{equation}\n",
+    "\n",
+    "3. Page 21, the last line of the HJB:\n",
+    "\n",
+    "$$\n",
+    "+ {\\frac {(\\eta - 1)} \\delta}  \\left(  \\left[ \\gamma_1 + \\gamma_2 y + \\gamma_3^m (y - {\\bar y})  \\right]   \\sum_{\\ell=1}^L \\pi^a_\\ell \\theta_\\ell {\\tilde e}\n",
+    "+ {\\frac 1 2}(\\gamma_2 + {\\color{red}{\\gamma_3}})   |\\varsigma|^2 \\tilde e^2  \\right)\n",
+    "$$\n",
+    "\n",
+    "${\\color{red}{\\gamma_3}} \\to {\\color{blue}{\\gamma_3^m}}$"
    ]
   }
  ],
