add pi_d to docstring and add simulation module

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -102,7 +102,7 @@
     "Consider an emissions \"pulse\" of the form\n",
     "\n",
     "$$\n",
-    "\\left(\\iota_y \\cdot Z_t \\right) F_t  \\left( \\theta dt + \\zeta \\cdot dW_t\\right) \n",
+    "\\left(\\iota_y \\cdot Z_t \\right) \\mathcal{E}_t  \\left( \\theta dt + \\varsigma \\cdot dW_t\\right) \n",
     "$$\n",
     "\n",
     "where $F_t$ is fossil fuel emissions and $\\iota_y \\cdot Z = \\{ \\iota_y \\cdot Z_t : t\\ge 0\\}$ is a positive process with mean one.  We will use a Feller square root process in our analysis.  For simplicity we impose the \"Matthews approximation\" by making the consequence of the pulse permanent:\n",
@@ -114,8 +114,8 @@
     "where\n",
     "\n",
     "\\begin{align*}\n",
-    "\\mu_y(z, f) & =  \\left(\\iota_y \\cdot Z_t \\right) F_t  \\theta   \\cr\n",
-    "\\sigma_y(z,f) & =  \\left(\\iota_y \\cdot Z_t \\right) F_t \\zeta\n",
+    "\\mu_y(z, e) & =  e \\left(\\iota_y \\cdot Z_t \\right)   \\theta   \\cr\n",
+    "\\sigma_y(z,e) & =  e \\left(\\iota_y \\cdot Z_t \\right) \\varsigma'\n",
     "\\end{align*}\n",
     "\n",
     "We will eventually introduce uncertainty about $\\theta$.  \n",
@@ -127,14 +127,14 @@
     "This state vector evolves according to:\n",
     "\n",
     "$$\n",
-    "dY_t = \\Lambda Y_t dt +    \\left(\\iota_y \\cdot Z_t \\right) F_t \\left(\\Theta dt + \\Sigma dW_t \\right) \n",
+    "dY_t = \\Lambda Y_t dt +    \\left(\\iota_y \\cdot Z_t \\right) \\mathcal{E}_t \\left(\\Theta dt + \\Sigma dW_t \\right) \n",
     "$$\n",
     "\n",
     "where $\\Lambda$ is a square matrix and $\\Theta$ is a column vector.  \n",
     "Given an initial condition $Y_0$, the solution for $Y_t$ satisfies:\n",
     "\n",
     "$$\n",
-    "Y_t = \\exp \\left( t \\Lambda \\right) Y_0 + \\int_0^t  \\exp\\left[ (t-u) \\Lambda \\right] \\left(\\iota_y \\cdot Z_t \\right) F_t \\left(\\Theta dt + \\Sigma dW_t \\right)\n",
+    "Y_t = \\exp \\left( t \\Lambda \\right) Y_0 + \\int_0^t  \\exp\\left[ (t-u) \\Lambda \\right] \\left(\\iota_y \\cdot Z_t \\right) \\mathcal{E}_t \\left(\\Theta dt + \\Sigma dW_t \\right)\n",
     "$$\n",
     "\n",
     "Thus under this specification, the expected future response of $Y$  to a pulse at date zero is:\n",
@@ -185,10 +185,10 @@
     "a value of $\\gamma_3$ starting at the jump point. We impose a jump intensity function that is, by design, localized at $ y = {\\overline y}$: \n",
     "\n",
     "$$\n",
-    "{\\mathcal I} (y) = \\left\\{ \\begin{matrix} \\left(\\frac 1  {\\sqrt{2}\\varsigma} \\right) \\exp\\left[ - \\frac {\\left(y - \\overline y \\right)^2 } {2 \\varsigma^2  } \\right] & y < {\\overline y} \\cr \\left(\\frac 1 {\\sqrt{2}\\varsigma} \\right) & y \\ge  {\\bar y} \\end{matrix}  \\right.\n",
+    "{\\mathcal I} (y) = \\left\\{ \\begin{matrix} \\left(\\frac 1  {\\sqrt{2}\\rho} \\right) \\exp\\left[ - \\frac {\\left(y - \\overline y \\right)^2 } {2 \\rho^2  } \\right] & y < {\\overline y} \\cr \\left(\\frac 1 {\\sqrt{2}\\rho} \\right) & y \\ge  {\\bar y} \\end{matrix}  \\right.\n",
     "$$\n",
     "\n",
-    "which becomes concentrated in the neighborhood of ${\\bar y}$ for $\\varsigma$ small.  This intensity is recognizable as the scaled version of  half normal density. A large intensity informs us that a jump is likely.  We let ${ \\pi}_j^p$  be the probabilities conditioned on the jump.  When the process jumps to state $j$, the parameter $\\gamma_3^j$ is revealed and the continuation value function is $\\phi_j$.  "
+    "which becomes concentrated in the neighborhood of ${\\bar y}$ for $\\rho$ small.  This intensity is recognizable as the scaled version of  half normal density. A large intensity informs us that a jump is likely.  We let ${ \\pi}_j^p$  be the probabilities conditioned on the jump.  When the process jumps to state $j$, the parameter $\\gamma_3^j$ is revealed and the continuation value function is $\\phi_j$.  "
    ]
   },
   {
@@ -218,23 +218,23 @@
     "As part of recursive robustness adjustment, we solve\n",
     "\n",
     "$$\n",
-    "\\min_h \\left(\\frac {\\partial \\phi}{\\partial x}\\right)\\cdot \\left(\\sigma_x h \\right) + {\\frac {\\xi_w} 2} |h|^2. \n",
+    "\\min_h \\left(\\frac {\\partial \\phi}{\\partial x}\\right)\\cdot \\left(\\sigma_x h \\right) + {\\frac {\\xi_b} 2} |h|^2. \n",
     "$$\n",
     "\n",
-    "where $\\xi_w$ is penalty parameter capturing aversion to potential misspecification.  The solution to this minimization problem is:\n",
+    "where $\\xi_b$ is penalty parameter capturing aversion to potential misspecification.  The solution to this minimization problem is:\n",
     "\\begin{equation} \\label{worst_robust}\n",
-    "h^* = - \\frac 1 {\\xi_w} {\\sigma_x}' \\left(\\frac {\\partial \\phi}{\\partial x}\\right)\n",
+    "h^* = - \\frac 1 {\\xi_b} {\\sigma_x}' \\left(\\frac {\\partial \\phi}{\\partial x}\\right)\n",
     "\\end{equation}\n",
     "with minimized objective:\n",
     "\n",
     "$$\n",
-    "- \\frac {1}  {2 \\xi_w} \\left( \\frac {\\partial \\phi}{\\partial x}\\right)' \\sigma_x {\\sigma_x}' \\left(\\frac {\\partial \\phi}{\\partial x}\\right)\n",
+    "- \\frac {1}  {2 \\xi_b} \\left( \\frac {\\partial \\phi}{\\partial x}\\right)' \\sigma_x {\\sigma_x}' \\left(\\frac {\\partial \\phi}{\\partial x}\\right)\n",
     "$$\n",
     "\n",
     "The change in the local evolution for $dX_t$ is  \n",
     "\n",
     "$$\n",
-    "-  \\frac 1 {\\xi_w} \\sigma_x {\\sigma_x}' \\left(\\frac {\\partial \\phi}{\\partial x}\\right)\n",
+    "-  \\frac 1 {\\xi_b} \\sigma_x {\\sigma_x}' \\left(\\frac {\\partial \\phi}{\\partial x}\\right)\n",
     "$$\n",
     "\n",
     "We explore aversion to the misspecification of Brownian risk by including this term in the HJB equation.  Large values of $\\xi_w $ make this contribution less consequential. While the direct impact is evident from the division by $\\xi_w$, the value function, and hence its partial derivative, also depends on $\\xi$.  The partial derivative of the value function is included to locate distortions that matter to the decision maker.\n",
@@ -325,36 +325,36 @@
     "\\sum_{i=1} \\pi_j^* \\mu_x^j \n",
     "$$\n",
     "\n",
-    "We have introduced three different parameters $(\\xi_w, \\xi_p, \\xi_a)$ that guide our sensitivity analysis.   Anderson, Hansen, Sargent suggest that $\\xi_w = \\xi_p$.  They also suggest ways to calibrate this parameter based on statistical detection challenges.  As the smooth ambiguity model also induces a drift distortion, we can adjust the $\\xi_a$ parameter to have a structured drift distortion of a comparable magnitude.  We also are guided by an approach from robust Bayesian analysis attributed to Good that inspects the implied distortions for {\\em a priori} plausibility.  \n",
+    "We have introduced three different parameters $(\\xi_b, \\xi_p, \\xi_a)$ that guide our sensitivity analysis.   Anderson, Hansen, Sargent suggest that $\\xi_b = \\xi_p$.  They also suggest ways to calibrate this parameter based on statistical detection challenges.  As the smooth ambiguity model also induces a drift distortion, we can adjust the $\\xi_a$ parameter to have a structured drift distortion of a comparable magnitude.  We also are guided by an approach from robust Bayesian analysis attributed to Good that inspects the implied distortions for a *priori* plausibility.  \n",
     "In our  pedagogical discussion so far,  we have seemingly ignored possible interactions between damage uncertainty and climate uncertainty.  In fact, these interactions will be present as climate change uncertainty will impact the value function contributions given by the $\\phi_j$'s and by $\\phi$.  \n",
     "\n",
     "\n",
     "## 3. A climate component of the planner's HJB\n",
     "\n",
-    "As we show in the appendix, the planners HJB equation conveniently separates into three different components.  We focus here on the component that includes the choice emissions, $F_t$.  Let ${\\widetilde F}_t = \\iota_y \\cdot Z_t F_t$, which we will use as a transformed \n",
+    "As we show in the appendix, the planners HJB equation conveniently separates into three different components.  We focus here on the component that includes the choice emissions, $\\mathcal{E}_t$.  Let $ \\mathcal{\\widetilde E}_t = \\iota_y \\cdot Z_t \\mathcal{E}_t$, which we will use as a transformed \n",
     "control variable.   In the absence of any specification uncertainty, the HJB equation of interest for $y <  {\\bar y}$ prior to Poisson jump is:\n",
     "\n",
     "\\begin{align} \\label{HJB_no}\n",
-    "0 = \\max_{\\tilde f} \n",
-    "& - \\delta \\phi(y)    + \\delta \\eta \\log \\tilde f    \\cr \n",
-    "& + \\frac {d \\phi(y)}{d y}  \\sum_{i=1}^n \\pi^a_i  \\theta_i {\\tilde f} + {\\frac 1 2} \\frac {d^2 \\phi(y)}{(dy)^2} |\\zeta|^2 \\tilde f^2  \\cr\n",
-    "&+ (\\eta - 1) \\left[  \\left( \\gamma_1 + \\gamma_2 y \\right)  \\sum_{i=1}^n \\pi^a_i \\theta_i {\\tilde f} + {\\frac 1 2} \\gamma_2 |\\zeta|^2 \\tilde f^2 \\right]\\cr\n",
-    "& + {\\mathcal I}(y)  \\sum_{j=1}^m \\pi_i^p \\left( \\phi_j - \\phi \\right) \n",
+    "0 = \\max_{\\tilde e} \n",
+    "& - \\delta \\phi(y)    +  \\eta \\log \\tilde e   \\cr \n",
+    "& + \\frac {d \\phi(y)}{d y}  \\sum_{i=1}^n \\pi^a_i  \\theta_i {\\tilde e} + {\\frac 1 2} \\frac {d^2 \\phi(y)}{(dy)^2} |\\varsigma|^2 \\tilde e^2  \\cr\n",
+    "&+ \\frac{(\\eta - 1)}{\\delta} \\left[  \\left( \\gamma_1 + \\gamma_2 y \\right)  \\sum_{i=1}^n \\pi^a_i \\theta_i {\\tilde e} + {\\frac 1 2} \\gamma_2 |\\varsigma|^2 \\tilde e^2 \\right]\\cr\n",
+    "& + {\\mathcal I}(y)  \\sum_{m=1}^M \\pi_m^p \\left( \\phi_m - \\phi \\right) \n",
     "\\end{align} \n",
     "\n",
-    "for a value function given by $\\phi(y) + (\\eta - 1) n$.  This is an equation in the value function $\\phi$ but the depends on the continuation value functions $\\phi_j$ pertinent after the tail of damage function is realized.  These value functions solve equations:\n",
+    "for a value function given by $\\phi(y) + \\frac{(\\eta - 1)}{\\delta} n$.  This is an equation in the value function $\\phi$ but the depends on the continuation value functions $\\phi_m$ pertinent after the tail of damage function is realized.  These value functions solve equations:\n",
     "\n",
     "\\begin{align*}\n",
-    "0 = \\max_{\\tilde f} \n",
-    "& - \\delta \\phi_j(y)    + \\delta \\eta \\log \\tilde f    \\cr \n",
-    "& + \\frac {d \\phi_j(y)}{d y}  \\sum_{i=1}^n \\pi^a_i  \\theta_i {\\tilde f} + {\\frac 1 2} \\frac {d^2 \\phi_j(y)}{(dy)^2} |\\zeta|^2 \\tilde f^2  \\cr\n",
-    "&+ (\\eta - 1) \\left(  \\left[ \\gamma_1 + \\gamma_2 y + \\gamma_3^j (y - {\\bar y})  \\right]   \\sum_{i=1}^n \\pi^a_i \\theta_i {\\tilde f}\n",
-    "+ {\\frac 1 2}(\\gamma_2 + \\gamma_3)   |\\zeta|^2 \\tilde f^2  \\right)\n",
+    "0 = \\max_{\\tilde e} \n",
+    "& - \\delta \\phi_j(y)    +  \\eta \\log \\tilde e    \\cr \n",
+    "& + \\frac {d \\phi_j(y)}{d y}  \\sum_{i=1}^n \\pi^a_i  \\theta_i {\\tilde e} + {\\frac 1 2} \\frac {d^2 \\phi_j(y)}{(dy)^2} |\\varsigma|^2 \\tilde e^2  \\cr\n",
+    "&+ \\frac{(\\eta - 1)}{\\delta} \\left(  \\left[ \\gamma_1 + \\gamma_2 y + \\gamma_3^j (y - {\\bar y})  \\right]   \\sum_{i=1}^n \\pi^a_i \\theta_i {\\tilde e}\n",
+    "+ {\\frac 1 2}(\\gamma_2 + \\gamma_3)   |\\varsigma|^2 \\tilde e^2  \\right)\n",
     "\\end{align*} \n",
     "for $j=1,2,...,m$.  The solutions for these $m$ HJB equations are inputs in the first HJB equation.    Given the localized nature of the jump intensity, we expect\n",
     "\n",
     "$$\n",
-    "\\phi\\left( {\\bar y} \\right) \\approx \\sum_{j=1}^m \\pi_j^p \\phi_j\\left( {\\bar y} \\right).\n",
+    "\\phi\\left( {\\bar y} \\right) \\approx \\sum_{m=1}^M \\pi_m^p \\phi_m\\left( {\\bar y} \\right).\n",
     "$$\n",
     "\n",
     "We now show the terms added in our sensitivity analysis:\n",
@@ -362,32 +362,32 @@
     "\n",
     "- Brownian misspecification: include\n",
     "$$\n",
-    "- \\frac {\\xi_w} 2 \\left\\vert\\left[ \\frac {d \\phi(y)}{d y} + (\\eta - 1)   \\left( \\gamma_1 + \\gamma_2 y\\right)  \\right] \\right\\vert^2 |\\zeta|^2  \\tilde f^2 .\n",
+    "- \\frac {\\xi_b} 2 \\left\\vert\\left[ \\frac {d \\phi(y)}{d y} + \\frac{(\\eta - 1)}{\\delta}   \\left( \\gamma_1 + \\gamma_2 y\\right)  \\right] \\right\\vert^2 |\\varsigma|^2  \\tilde e^2 .\n",
     "$$\n",
     " \n",
     "- Climate model ambiguity: replace \n",
     "\n",
     "$$\n",
-    " \\sum_{i=1}^n \\pi_i^a  \\theta_i \\left[ \\frac {d \\phi(y)}{d y} + (\\eta - 1)  \\left( \\gamma_1 + \\gamma_2 y \\right)\\right] {\\tilde f}\n",
+    " \\sum_{i=1}^n \\pi_i^a  \\theta_i \\left[ \\frac {d \\phi(y)}{d y} + \\frac{(\\eta - 1)}{\\delta}  \\left( \\gamma_1 + \\gamma_2 y \\right)\\right] {\\tilde e}\n",
     "$$\n",
     "\n",
     "with ambiguity adjusted certainty equivalent:\n",
     "\n",
     "$$\n",
-    "- \\xi_a \\log \\sum_{i=1}^n\\pi_i^a \\exp\\left( - \\frac 1 {\\xi_a} \\theta_i \\left[\\frac {d \\phi(y)}{d y}  + (\\eta -1) \\left( \\gamma_1 + \\gamma_2 y \\right) \\right] {\\tilde f}\\right)\n",
+    "- \\xi_a \\log \\sum_{i=1}^n\\pi_i^a \\exp\\left( - \\frac 1 {\\xi_a} \\theta_i \\left[\\frac {d \\phi(y)}{d y}  + \\frac{(\\eta -1)}{\\delta} \\left( \\gamma_1 + \\gamma_2 y \\right) \\right] {\\tilde e}\\right)\n",
     "$$\n",
     "\n",
-    "- Jump misspecification: replace ${\\mathcal I}(y)  \\sum_{j=1}^m \\pi_i^p \\left[ \\phi_j(y) - \\phi(y)  \\right] $ with:\n",
+    "- Jump misspecification: replace ${\\mathcal I}(y)  \\sum_{m=1}^M \\pi_m^p \\left[ \\phi_m(y) - \\phi(y)  \\right] $ with:\n",
     "\n",
     "$$\n",
-    "- \\left(\\xi_p {\\mathcal I}\\right) \\frac {\\sum_{j=1}^m \\pi_j^p \\exp \\left(- \\frac 1 {\\xi_p} \\phi_j\\right) - \\exp \\left(- \\frac 1 {\\xi_p} \\phi \\right)}{\\exp \\left(- \\frac 1 {\\xi_p} \\phi \\right)}\n",
+    "- \\left(\\xi_p {\\mathcal I}\\right) \\frac {\\sum_{m=1}^M \\pi_m^p \\exp \\left(- \\frac 1 {\\xi_p} \\phi_m\\right) - \\exp \\left(- \\frac 1 {\\xi_p} \\phi \\right)}{\\exp \\left(- \\frac 1 {\\xi_p} \\phi \\right)}\n",
     "$$\n",
     "\n",
     "and make corresponding adjustments to the Brownian and climate model uncertainty contributions.  \n",
     "When this jump risk adjustment is made, we expect:\n",
     "\n",
     "$$\n",
-    "\\phi(\\overline y) \\approx - \\xi_p \\log \\sum_{j=1}^m \\pi_j^p \\exp \\left[- \\frac 1 {\\xi_p} \\phi_j({\\overline y}) \\right]\n",
+    "\\phi(\\overline y) \\approx - \\xi_p \\log \\sum_{m=1}^M \\pi_m^p \\exp \\left[- \\frac 1 {\\xi_p} \\phi_m({\\overline y}) \\right]\n",
     "$$\n",
     "\n",
     "where the right side is the certainty equivalent for an ambiguity  adjusted post jump continuation value.  For our computations, we impose this as a boundary value.  \n",
@@ -433,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.7"
   }
  },
  "nbformat": 4,
