--- a/notebook/plots_standardized_corrected.ipynb
+++ b/notebook/plots_standardized_corrected.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,21 +24,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converged. Total iteration 5000: LHS Error: 0.00011794573695667054; RHS Error 6.681372455581702e-05\n",
-      "Converged. Total iteration 1501: LHS Error: 9.932937805601227e-09; RHS Error 0.0004825812927628306\n",
-      "Converged. Total iteration 1619: LHS Error: 9.868386996458867e-09; RHS Error 0.0022617539616424306\n",
-      "Converged. Total iteration 372: LHS Error: 8.939528228779636e-09; RHS Error 0.0006258279853032234\n",
-      "Converged. Total iteration 5000: LHS Error: 4.183515303690655e-05; RHS Error 9.117047385512334e-05\n",
-      "Converged. Total iteration 1507: LHS Error: 9.965610114903711e-09; RHS Error 0.00047002697355678913\n",
-      "Converged. Total iteration 1621: LHS Error: 9.952280777270062e-09; RHS Error 0.0022788046860334884\n",
-      "Converged. Total iteration 443: LHS Error: 9.764197450579104e-09; RHS Error 0.0008703168687622803\n"
+      "Converged. Total iteration 5000: LHS Error: 3.3482354702130124e-06; RHS Error 0.0001381199196701377\n",
+      "Converged. Total iteration 5000: LHS Error: 1.513931360337395e-05; RHS Error 0.00043420076279523934\n",
+      "Converged. Total iteration 5000: LHS Error: 2.0586199623773284e-05; RHS Error 0.0022303411098343233\n",
+      "Converged. Total iteration 5000: LHS Error: 1.4606629005387007e-05; RHS Error 0.0005717727581604007\n",
+      "Converged. Total iteration 5000: LHS Error: 2.64627053017108e-06; RHS Error 0.00013138781940240374\n",
+      "Converged. Total iteration 5000: LHS Error: 8.207149745720343e-06; RHS Error 0.000437112470925205\n",
+      "Converged. Total iteration 331: LHS Error: 9.900674768914542e-09; RHS Error 0.0022283118184663175\n",
+      "Converged. Total iteration 5000: LHS Error: 1.2698912591480038e-05; RHS Error 0.0008060769039047663\n"
      ]
     }
    ],
@@ -96,6 +96,54 @@
     "    \n",
     "    yt_i.append(y_temp)\n",
     "    ht_i.append(h_temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.00016005, -0.00214117, -0.00208638, -0.00153057, -0.0020834 ,\n",
+       "       -0.00225626, -0.00027862, -0.00175115, -0.00218603,  0.01323484,\n",
+       "        0.00011468,  0.00058396,  0.00454406,  0.00060856, -0.00119761,\n",
+       "        0.01249687,  0.0030572 , -0.00030832,  0.00923822, -0.0005956 ,\n",
+       "       -0.00024665,  0.00271875, -0.00022834, -0.00156067,  0.00868532,\n",
+       "        0.00160316, -0.00090883, -0.00023934, -0.00215092, -0.00209875,\n",
+       "       -0.00156449, -0.0020959 , -0.00225843, -0.00035405, -0.00177709,\n",
+       "       -0.00219336,  0.00236699, -0.00177189, -0.00163536, -0.00041212,\n",
+       "       -0.00162811, -0.00212279,  0.00213043, -0.00088002, -0.00189132,\n",
+       "        0.00387957, -0.00152397, -0.00133986,  0.00027266, -0.00133008,\n",
+       "       -0.00201269,  0.00357332, -0.00033974, -0.0016869 ,  0.0087344 ,\n",
+       "       -0.00068455, -0.00035095,  0.00248844, -0.00033342, -0.00160546,\n",
+       "        0.00820467,  0.00141972, -0.00098384, -0.00206274, -0.00223723,\n",
+       "       -0.00224976, -0.00225226, -0.00225029, -0.00216263, -0.00208278,\n",
+       "       -0.00226511, -0.00222116, -0.00225481, -0.00213521, -0.00215738,\n",
+       "       -0.00224726, -0.00215842, -0.00203664, -0.00225823, -0.00222662,\n",
+       "       -0.00211081,  0.01791889,  0.00095085,  0.00155933,  0.00667617,\n",
+       "        0.00159117, -0.00076198,  0.01696175,  0.00475617,  0.00040123,\n",
+       "       -0.00226234, -0.00205209, -0.00207653, -0.00219139, -0.0020777 ,\n",
+       "       -0.00194951, -0.00226027, -0.00216066, -0.0020259 ,  0.00787043,\n",
+       "       -0.00083661, -0.00052928,  0.00209339, -0.00051318, -0.00168145,\n",
+       "        0.0073804 ,  0.0011055 , -0.00111184, -0.00130189, -0.00225411,\n",
+       "       -0.00223817, -0.00200139, -0.00223721, -0.00225828, -0.0013645 ,\n",
+       "       -0.00210364, -0.00226364,  0.00862697, -0.00070353, -0.00037315,\n",
+       "        0.00243928, -0.00035585, -0.00161496,  0.00810213,  0.00138066,\n",
+       "       -0.00099983, -0.00127076, -0.00225219, -0.00223516, -0.00198934,\n",
+       "       -0.00223414, -0.00225946, -0.00133496, -0.00209497, -0.00226271,\n",
+       "       -0.00171516, -0.00226652, -0.00226548, -0.00215258, -0.0022653 ,\n",
+       "       -0.00222892, -0.0017559 , -0.00220871, -0.00226259])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(model_i[0]['πc'][:, 100] - model_i[2]['πc'][:, 100]) / (1/144)"
    ]
   },
   {
