--- a/notebook/PaperResults.ipynb
+++ b/notebook/PaperResults.ipynb
@@ -20,6 +20,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('/home/suri/Dropbox/wrestling_climate/WrestlingClimate/notebook',\n",
+       " '/home/suri/Dropbox/wrestling_climate/WrestlingClimate')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd(), os.path.dirname(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.path.insert(0, os.path.abspath(\"../\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "?sys.path.insert"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -42,7 +81,7 @@
    "metadata": {},
    "source": [
     "# Emission trajectory simualtion\n",
-    "Use the above values, simulate emission based on $\\tau_2 = 0$, $\\xi = 8\\times\\delta\\times\\eta = .00256$ and $ \\xi = 4\\times\\delta\\times\\eta = .00128$.\n",
+    "Use the above values, simulate emission based on $\\tau_2 = 0$, $\\xi = 8\\times\\delta\\times\\eta = .00256$ and $\\xi = 4\\times\\delta\\times\\eta = .00128$.\n",
     "\n",
     "The simulation starts with initial reserve of 1500 and time span is 500 years."
    ]
