establish a sphinx doc

--- a/appendix.ipynb
+++ b/appendix.ipynb
@@ -2,10 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "transsexual-dependence",
+   "id": "alleged-banks",
    "metadata": {},
    "source": [
-    "# Computation methods"
+    "# Computation methods\n",
+    "\n",
+    "We use false transient method to solve the ODEs in this paper."
    ]
   }
  ],
