--- a/sec5_UncertaintyAversion.ipynb
+++ b/sec5_UncertaintyAversion.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +466,7 @@
    "source": [
     "Continue to the next section\n",
     "    \n",
-    "[Section 6: A climate component of a planner's decision problem](sec6_DecisionProblem.ipynb)"
+    "Section 6: [A climate component of a planner's decision problem](sec6_DecisionProblem.ipynb)"
    ]
   }
  ],
