add module to docs

--- a/sec9_RicherSetting.ipynb
+++ b/sec9_RicherSetting.ipynb
@@ -2,10 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "rental-mustang",
+   "id": "productive-smile",
    "metadata": {},
    "source": [
-    "# 9 A richer economic setting"
+    "# 9 A richer economic setting\n",
+    "\n",
+    "Under construction"
    ]
   }
  ],
