--- a/notebook/BHmodified.ipynb
+++ b/notebook/BHmodified.ipynb
@@ -15,6 +15,182 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from sympy import *\n",
+    "x = symbols('x')\n",
+    "from sympy import roots, solve_poly_system\n",
+    "\n",
+    "sol = solve( - x**4 + 2*x  - 1, x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1,\n",
+       "       -1/3 + (-1/2 - sqrt(3)*I/2)*(17/27 + sqrt(33)/9)**(1/3) - 2/(9*(-1/2 - sqrt(3)*I/2)*(17/27 + sqrt(33)/9)**(1/3)),\n",
+       "       -1/3 - 2/(9*(-1/2 + sqrt(3)*I/2)*(17/27 + sqrt(33)/9)**(1/3)) + (-1/2 + sqrt(3)*I/2)*(17/27 + sqrt(33)/9)**(1/3),\n",
+       "       -1/3 - 2/(9*(17/27 + sqrt(33)/9)**(1/3)) + (17/27 + sqrt(33)/9)**(1/3)],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([i for i in sol])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, -1/3 - 2/(9*(17/27 + sqrt(33)/9)**(1/3)) + (17/27 + sqrt(33)/9)**(1/3))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol[0], sol[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.0000000000000002, 0.5436890126920765)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r1 = -1/3 - 2/(9*(17/27 + np.sqrt(33)/9)**(1/3)) + (17/27 + np.sqrt(33)/9)**(1/3)\n",
+    "r1\n",
+    "2*r1 - r1**4, r1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0.        , -54.16692119])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sols = np.array([1, r1])\n",
+    "x = 2*np.log(sols)/(0.3/2)**2\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = x[-1]\n",
+    "exponent = np.exp(r/2*(0.3/2)**2) -1\n",
+    "r0_list = []\n",
+    "for ϵ in [0.25, 1]:\n",
+    "    r0 = 1/2/(exponent*ϵ)\n",
+    "    r0_list.append(r0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.4563109873079235"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exponent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([-4.382975767906238, -1.0957439419765596], [0.25, 1])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r0_list, [0.25, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.49999999999999994, 1.0)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r0_list[0]*(np.exp(r/2*(0.3/2)**2)-1)*0.25,r0_list[0]*(np.exp(r/2*(0.3)**2)-1)*0.25"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 158,
    "metadata": {},
    "outputs": [],
